ingresses/impact.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: impact
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # https://github.com/nginxinc/kubernetes-ingress/issues/209
    nginx.org/server-snippets: "server_name ~^.*$;"
spec:
  # backend:
  #   serviceName: impact
  #   servicePort: 8080
  # TODO: use https://github.com/godaddy/kubernetes-client to create certificates for other domains
  tls:
    - hosts:
      - impactdns.techby.org
      secretName: main-tls
    - hosts:
      - numberwang.hackclub.com
      secretName: hackclub-tls
  
  rules:
  - host: data.upchieve.org
    http:
      paths:
      - backend:
          serviceName: impact
          servicePort: 8080
  
  - host: numberwang.hackclub.com
    http:
      paths:
      - backend:
          serviceName: impact
          servicePort: 8080
